tests/baselines/reference/asyncFunctionDeclaration9_es6.errors.txt
asyncFunctionDeclaration9_es6.ts(2,19): error TS1109: Expression expected.


==== asyncFunctionDeclaration9_es6.ts (1 errors) ====
    async function foo(): Promise<void> {
      var v = { [await]: foo }
                      ~
!!! error TS1109: Expression expected.
    }